reponsive product grid w/ bottom cut off bug

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -1,5 +1,5 @@
 .boot-card{
-  height: 400px;
+  min-height: 30vh;
   cursor: pointer;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .cart-img{
-  width: 200px;
-  height: 200px;
+  min-width: 200px;
+  min-height: 200px;
   object-fit: contain;
 }
